<resources>
    <string name="app_name">Sangeet</string>
    <string name="exit">Exit</string>
    <string name="feedback">FeedBack</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="header">header</string>
    <string name="header_title">Welcome to \nWorld of Sangeet</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="song_title">Song Title</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourites">Favourites</string>
    <string name="playlist">Playlist</string>
    <string name="songs_name">Songs Name</string>
    <string name="timer">00:00</string>
    <string name="loading">Loading..</string>
    <string name="search">Search</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>

</resources>