<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnShuffle"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle"
                android:drawableTop="@drawable/shuffle_img"
                android:text="@string/shuffle"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnFavourite"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/favourites"
                android:drawableTop="@drawable/favorite"
                android:text="@string/favourites"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnPlayList"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/playlist"
                android:drawableTop="@drawable/music_library"
                android:text="@string/playlist"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTotalSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:textStyle="bold"
            tools:text="@string/song_title"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/songlist" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawerView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_item" />


</androidx.drawerlayout.widget.DrawerLayout>