<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.PlayerActivity">
    <include layout="@layout/navbar" android:id="@+id/navbar"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgSongCoverPA"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center_vertical|center_horizontal"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/_2sdp"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/img_song_cover" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/songs_name"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_marginVertical="@dimen/_4sdp"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous"
            app:iconSize="@dimen/_30sdp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:icon="@drawable/pause"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_dark"
            app:iconTint="@color/white"
            app:iconSize="@dimen/_30sdp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next"
            app:iconSize="@dimen/_30sdp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvSeekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            />
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/btnSeekbar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvSeekbarEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/repeat_img"/>
        <ImageView
            android:id="@+id/btnEqualizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/graphic_eq_img"/>
        <ImageView
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/timer_img"/>
        <ImageView
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/share_img"/>
    </LinearLayout>
</LinearLayout>